# pycades

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  PyCades.cpp  PyCadesAbout.cpp  PyCadesAbout.h  PyCadesAlgorithm.cpp  PyCadesAlgorithm.h  PyCadesAttribute.cpp  PyCadesAttribute.h  PyCadesAttributes.cpp  PyCadesAttributes.h  PyCadesBasicConstraints.cpp  PyCadesBasicConstraints.h  PyCadesBlobs.cpp  PyCadesBlobs.h  PyCadesCRL.cpp  PyCadesCRL.h  PyCadesCertificate.cpp  PyCadesCertificate.h  PyCadesCertificateStatus.cpp  PyCadesCertificateStatus.h  PyCadesCertificates.cpp  PyCadesCertificates.h  PyCadesEKU.cpp  PyCadesEKU.h  PyCadesEKUs.cpp  PyCadesEKUs.h  PyCadesEncodedData.cpp  PyCadesEncodedData.h  PyCadesEnvelopedData.cpp  PyCadesEnvelopedData.h  PyCadesExtendedKeyUsage.cpp  PyCadesExtendedKeyUsage.h  PyCadesExtension.cpp  (+39 more)
.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: develop.yml  release.yml
cplib/: StringProxy.h
doc/: pycades-build.md  pycades-install.md  pycades-samples.md
docs/: pycades-build.md  pycades-install.md  pycades-samples.md  pycades.md
examples/: sample_encrypt_decrypt.py  sample_enum_containers.py  sample_sign_verify.py  sample_sign_verify_xml.py  sample_signhash_verifyhash.py
patches/: 001-rename-lib.patch
samples/: encrypt_decrypt.py  enum_containers.py  sample_enum_containers.py  sign_verify.py  sign_verify_xml.py
src/: CMakeLists.txt  PyCades.cpp  PyCadesAlgorithm.cpp  PyCadesAlgorithm.h  PyCadesAttributes.cpp  PyCadesBlobs.cpp  PyCadesCRL.h  PyCadesCertificateStatus.cpp  PyCadesCertificateStatus.h  PyCadesCertificates.cpp  PyCadesEKU.h  PyCadesEKUs.h  PyCadesEncodedData.cpp  PyCadesEnvelopedData.h  PyCadesExtendedKeyUsage.cpp  PyCadesExtendedKeyUsage.h  PyCadesExtension.cpp  PyCadesExtensions.cpp  PyCadesHashedData.cpp  PyCadesHashedData.h  PyCadesKeyUsage.h  PyCadesOID.cpp  PyCadesPrivateKey.cpp  PyCadesPublicKey.cpp  PyCadesRawSignature.cpp  PyCadesRecipients.cpp  PyCadesRecipients.h  PyCadesSignedData.cpp  PyCadesSignedData.h  PyCadesSignedXML.cpp  PyCadesSignedXML.h  PyCadesSigner.cpp  PyCadesSigner.h  PyCadesSigners.cpp  PyCadesSigners.h  PyCadesStore.cpp  PyCadesStore.h  PyCadesSymmetricAlgorithm.cpp  PyCadesVersion.h  PyEnrollContainer.h  (+7 more)
src/cplib/: Blob.h  CPPEnrollEnumerations.h  DateTime.h  StringProxy.h  cpstldll.h
src/cpp/: PyCades.cpp  PyCadesAbout.cpp  PyCadesAbout.h  PyCadesAlgorithm.h  PyCadesAttribute.cpp  PyCadesAttributes.cpp  PyCadesAttributes.h  PyCadesBasicConstraints.cpp  PyCadesBasicConstraints.h  PyCadesBlobs.cpp  PyCadesBlobs.h  PyCadesCRL.h  PyCadesCertificate.cpp  PyCadesCertificate.h  PyCadesCertificateStatus.cpp  PyCadesCertificateStatus.h  PyCadesCertificates.cpp  PyCadesCertificates.h  PyCadesEKU.h  PyCadesEKUs.cpp  PyCadesEKUs.h  PyCadesEncodedData.cpp  PyCadesEncodedData.h  PyCadesEnvelopedData.cpp  PyCadesEnvelopedData.h  PyCadesExtendedKeyUsage.cpp  PyCadesExtendedKeyUsage.h  PyCadesExtension.cpp  PyCadesExtension.h  PyCadesExtensions.cpp  PyCadesExtensions.h  PyCadesHashedData.cpp  PyCadesHashedData.h  PyCadesKeyUsage.cpp  PyCadesKeyUsage.h  PyCadesOID.h  PyCadesPrivateKey.cpp  PyCadesPrivateKey.h  PyCadesPublicKey.cpp  PyCadesPublicKey.h  (+27 more)
src/cpp/cplib/: Blob.h  CPPEnrollEnumerations.h  DateTime.h  StringProxy.h
src/ext/: PyCades.cpp  PyCadesAlgorithm.cpp  PyCadesAttribute.h  PyCadesCRL.cpp  PyCadesCertificate.cpp  PyCadesCertificates.h  PyCadesEKU.cpp  PyCadesEnvelopedData.cpp  PyCadesExtension.h  PyCadesOID.cpp  PyCadesRawSignature.cpp  PyCadesRecipients.cpp  PyCadesRecipients.h  PyCadesSignedData.cpp  PyCadesSigner.cpp  PyCadesSymmetricAlgorithm.cpp  PyCadesSymmetricAlgorithm.h  PyEnrollContainerKey.cpp  stdafx.h
src/pycades/: CMakeLists.txt  PyCades.cpp  PyCadesAbout.cpp  PyCadesAbout.h  PyCadesAttribute.cpp  PyCadesAttribute.h  PyCadesAttributes.h  PyCadesBasicConstraints.cpp  PyCadesBasicConstraints.h  PyCadesBlobs.h  PyCadesCRL.cpp  PyCadesCertificate.cpp  PyCadesCertificate.h  PyCadesCertificateStatus.h  PyCadesCertificates.h  PyCadesEKU.cpp  PyCadesEKUs.cpp  PyCadesEncodedData.h  PyCadesEnvelopedData.cpp  PyCadesEnvelopedData.h  PyCadesExtendedKeyUsage.cpp  PyCadesExtension.h  PyCadesExtensions.h  PyCadesKeyUsage.cpp  PyCadesOID.h  PyCadesPrivateKey.h  PyCadesPublicKey.h  PyCadesRawSignature.cpp  PyCadesRawSignature.h  PyCadesRecipients.cpp  PyCadesSignatureStatus.cpp  PyCadesSignatureStatus.h  PyCadesSymmetricAlgorithm.h  PyCadesVersion.cpp  PyEnrollContainer.cpp  PyEnrollContainerKeys.h  PyEnrollContainers.cpp  PyEnrollCspInformation.h  __init__.py  _pycades.pyi  (+1 more)
src/pycades/cplib/: cpstldll.h
tests/: requirements.txt  test_dummy.py
tests/fixtures/: pycades-root.cer  pycades-root.crl  pycades-test.pfx
tests/scripts/: setup-crl.sh  setup-leaf.sh  setup-root.sh
