[project]
name = "pycades"
version = "0.1.70300"
description = "Python3 extension for CAdES"
readme = "README.md"
authors = [
    { name = "CryptoPro LLC", email = "support@cryptopro.ru" }
]
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = []

[project.urls]
homepage = "https://docs.cryptopro.ru/cades/pycades"
documentation = "https://docs.cryptopro.ru/cades/pycades"
source = "https://github.com/CryptoPro/pycades"

[build-system]
requires = ["py-build-cmake"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.cmake]
source_path = "."
minimum_version = "3.18"
build_args = ["-j8"]

[tool.py-build-cmake.module]
directory = "src" 

[tool.py-build-cmake.sdist]
include = ["CMakeLists.txt", "src/*"]
